Se suben ajustes en el front

--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light shadow">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/admin/" routerLinkActive="active">Bienvenido: <strong> {{nombreUsuario}} </strong></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,14 +9,14 @@
       <!-- Menú izquierda -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-         <a class="nav-link" routerLink="/admin/dashboard" routerLinkActive="active">Productos</a>
+         <a class="nav-link" routerLink="/admin/dashboard" routerLinkActive="active">Listado de Productos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/registro/productos">Registro de Productos</a>
+          <a class="nav-link" routerLink="/admin/productos/registro">Registro de Productos</a>
         </li>
 
          <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/registro/categorias">Registro de Categorias</a>
+          <a class="nav-link" routerLink="/admin/categorias/registro">Registro de Categorias</a>
         </li>
 
         <li class="nav-item">
