--- a/src/app/login/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/login/inicio-sesion/inicio-sesion.component.html
@@ -19,7 +19,7 @@
       <button type="submit" (click)="login()">Ingresar</button>
 
       <p class="signup-link">
-        ¿No tienes cuenta? <a href="#">Regístrate</a>
+        ¿No tienes cuenta? <a routerLink="/paginaEnConstruccion">Regístrate</a>
       </p>
     </form>
   </div>
