--- a/src/app/paginaInicial/home/home.component.html
+++ b/src/app/paginaInicial/home/home.component.html
@@ -60,7 +60,6 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-
   <section id="que-hacemos">
     <div class="container mt-5">
       <hr class="featurette-divider" />
@@ -145,7 +144,7 @@
       <h2 class="text-center contact-container ">Pasos para adquir tu cocina</h2>
       <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5 align-items-center justify-content-center">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_1.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -155,7 +154,7 @@
               </div>
             </div>
           </a>
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_2.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -166,7 +165,7 @@
               </div>
             </div>
           </a>
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_3.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -177,7 +176,7 @@
               </div>
             </div>
           </a>
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_4.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -187,7 +186,7 @@
               </div>
             </div>
           </a>
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_5.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -197,7 +196,7 @@
               </div>
             </div>
           </a>
-          <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+          <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
             <img src="icons/paso_6.png" alt="" width="32" height="32" class="rounded-circle flex-shrink-0">
             <div class="d-flex gap-2 w-100 justify-content-between">
               <div>
@@ -242,7 +241,6 @@
 
   <section id="Contacto">
     <div class="container justify-content-center mt-4">
-      <hr class="featurette-divider" />
       <app-envio-correo/>
       <hr class="featurette-divider" />
     </div>
