--- a/src/app/paginaInicial/componente-categorias-productos/componente-categorias-productos.component.html
+++ b/src/app/paginaInicial/componente-categorias-productos/componente-categorias-productos.component.html
@@ -1,8 +1,8 @@
 <div>
-  <h2>Nuestros Productos</h2>
+  <h1>Nuestros Productos</h1>
 </div>
-<mat-form-field appearance="outline">
-  <mat-label>Selecciona una categoría</mat-label>
+<mat-form-field class="estiloSelect" appearance="outline">
+  <mat-label>-- Seleccione una categoria --</mat-label>
   <mat-select [(value)]="categoriaSeleccionada"
               (selectionChange)="onCategoriaChange($event.value)">
     <mat-option *ngFor="let cat of categorias" [value]="cat">
@@ -14,5 +14,7 @@
 <!-- Aquí le pasamos la categoría seleccionada al componente hijo -->
 <app-visualizacion-productos-cliente
   *ngIf="categoriaSeleccionada"
-  [categoria]="categoriaSeleccionada">
+  [categoria]="categoriaSeleccionada"
+  [attr.key]="categoriaSeleccionada">
 </app-visualizacion-productos-cliente>
+
