--- a/src/app/paginaInicial/visualizacion-productos-cliente/visualizacion-productos-cliente.component.html
+++ b/src/app/paginaInicial/visualizacion-productos-cliente/visualizacion-productos-cliente.component.html
@@ -2,43 +2,47 @@
   <div class="container ">
     <div class="row">
       @if (isLoading) {
-      <!-- Skeleton cards mientras carga -->
-      @for (item of [1,2,3,4,5,6,7,8]; track $index) {
-      <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-        <div class="card h-100 shadow-custom skeleton-card" aria-hidden="true">
-          <div class="skeleton skeleton-img"></div>
-          <div class="card-body">
-            <div class="skeleton skeleton-text title"></div>
-            <div class="skeleton skeleton-text"></div>
-            <div class="skeleton skeleton-text short"></div>
+        <!-- Skeleton cards mientras carga -->
+        @for (item of [1,2,3,4,5,6]; track $index) {
+          <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+            <div class="card h-100 shadow-custom skeleton-card" aria-hidden="true">
+              <div class="skeleton skeleton-img"></div>
+              <div class="card-body">
+                <div class="skeleton skeleton-text title"></div>
+                <div class="skeleton skeleton-text"></div>
+                <div class="skeleton skeleton-text short"></div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      }
+        }
       }
 
       @if (!isLoading) {
-      @if (pagedProductos.length > 0) {
-      @for (producto of pagedProductos; track $index) {
-      <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
-        <div class="card h-100 shadow-custom">
-          <img class="card-img-top" [src]="producto.url" alt="{{ producto.nombre }}" (error)="onImagenError($event)" />
-          <div class="card-body">
-            <h5 class="card-title">{{ producto.titulo }}</h5>
-            <p class="card-text">{{ producto.descripcion }}</p>
-            <a type="button" (click)="openDialog()" class="btn btn-primary">Ver detalle</a>
+        @if (pagedProductos.length > 0) {
+          @for (producto of pagedProductos; track $index) {
+            <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
+              <div class="card h-100 shadow-custom">
+                <img class="card-img-top" [src]="producto.url" alt="{{ producto.nombre }}" (error)="onImagenError($event)" />
+                <div class="card-body">
+                  <h5 class="card-title">{{ producto.titulo }}</h5>
+                  <p class="card-text">{{ producto.descripcion }}</p>
+                  <a type="button" (click)="openDialog(producto)" class="btn btn-primary">Ver detalle</a>
+                </div>
+              </div>
+            </div>
+          }
+            <mat-paginator
+            [length]="productos.length"
+            [pageSize]="pageSize"
+            [pageIndex]="currentPage"
+            [pageSizeOptions]="pageSizeOptions"
+            (page)="handlePageEvent($event)">
+          </mat-paginator>
+        } @else {
+          <div class="alert alert-danger text-center" role="alert">
+            Por el momento no hay {{categoria}} disponibles
           </div>
-        </div>
-      </div>
-      }
-      <mat-paginator [length]="productos.length" [pageSize]="pageSize" [pageIndex]="currentPage"
-        [pageSizeOptions]="pageSizeOptions" (page)="handlePageEvent($event)">
-      </mat-paginator>
-      } @else {
-      <div class="alert alert-danger text-center" role="alert">
-        Por el momento no hay PRODUCTOS disponibles
-      </div>
-      }
+        }
       }
     </div>
   </div>
