Subimos nuevos componentes del lado del front 25/10/2025

--- a/src/app/admin/componente-categorias/componente-categorias.component.html
+++ b/src/app/admin/componente-categorias/componente-categorias.component.html
@@ -1,1 +1,24 @@
-<p>componente-categorias works!</p>
+<div class="container">
+
+    <div id="productos" class="form-container">
+        <h1>Crear una categoria nueva</h1>
+        <form [formGroup]="categoriaForm" (ngSubmit)="registrarCategoria()" class="product-form">
+
+            <!-- Nombre -->
+            <mat-form-field appearance="outline" class="full-width">
+                <mat-label>Nombre del categoria</mat-label>
+                <input matInput formControlName="nombreCategoria" placeholder="Ej: Pollo asado">
+                <mat-error *ngIf="categoriaForm.get('nombreCategoria')?.hasError('required')">
+                    El nombre de la categoria es obligatorio
+                </mat-error>
+            </mat-form-field>
+
+            <!-- Botón -->
+            <button class="btn btn-primary" type="submit" [disabled]="!categoriaForm.valid">
+                Registrar Categoria
+            </button>
+        </form>
+    </div>
+
+    <hr width="100%">
+</div>
