--- a/src/app/admin/componente-dashboard/componente-dashboard.component.html
+++ b/src/app/admin/componente-dashboard/componente-dashboard.component.html
@@ -78,7 +78,10 @@
           <!-- Categoría -->
           <ng-container matColumnDef="categoria">
             <th mat-header-cell *matHeaderCellDef class="header-black"> Categoría </th>
-            <td mat-cell *matCellDef="let element"> {{element.categoria}} </td>
+            <td mat-cell *matCellDef="let element">
+              {{ element.categoria?.nombreCategoria || 'Sin categoría' }}
+            </td>
+
           </ng-container>
 
           <!-- Precio -->
