--- a/src/app/admin/componente-navegacion/componente-navegacion.component.html
+++ b/src/app/admin/componente-navegacion/componente-navegacion.component.html
@@ -1,23 +1,44 @@
 <nav class="navbar navbar-expand-lg bg-light shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/admin/" routerLinkActive="active">Bienvenido: <strong> {{nombreUsuario}} </strong></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" routerLink="/admin/" routerLinkActive="active">Bienvenido: <strong> {{nombreUsuario}}
+      </strong></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Menú izquierda -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-         <a class="nav-link" routerLink="/admin/dashboard" routerLinkActive="active">Listado de Productos</a>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Gestion Productos
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/admin/dashboard">Listado de Productos</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/productos/registro">Registro de Productos</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/productos/registro">Registro de Productos</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Gestion Categorias
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/admin/categorias/listar">Tabla de registros de categorias</a></li>
+            <li><a class="dropdown-item" routerLink="/admin/categorias/registro">Registro de categorias</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </li>
 
-         <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/categorias/registro">Registro de Categorias</a>
-        </li>
+
 
         <li class="nav-item">
           <a class="nav-link disabled">Disabled</a>
@@ -28,14 +49,17 @@
 
       <!-- Bloque derecho: usuario -->
       <div class="dropdown">
-        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+          aria-expanded="false">
           <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
         </a>
         <ul class="dropdown-menu dropdown-menu-end text-small shadow">
           <li><a class="dropdown-item" href="#">Perfil</a></li>
           <li><a class="dropdown-item" href="#">Settings</a></li>
           <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li><hr class="dropdown-divider"></li>
+          <li>
+            <hr class="dropdown-divider">
+          </li>
           <li><a type="button" class="dropdown-item" (click)="questionUser()">Cerrar Sesión</a></li>
         </ul>
       </div>
