--- a/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
+++ b/src/app/footer/componente-pie-pagina/componente-pie-pagina.component.html
@@ -15,6 +15,26 @@
         </li>
       </ul>
     </div>
+
+
+
+
+    <div class="col mb-3">
+      <h5>Números de atención</h5>
+      <ul class="list-unstyled">
+        <li class="d-flex align-items-center mb-2">
+          <img src="icons/telefono.png" alt="Teléfono" class="icono-red me-2">
+          <a class="link-body-emphasis" href="tel:5919170915">5919 170 915</a>
+        </li>
+        <li class="d-flex align-items-center">
+          <img src="icons/telefono.png" alt="Teléfono" class="icono-red me-2">
+          <a class="link-body-emphasis" href="tel:5610903664">5610 903 664</a>
+        </li>
+      </ul>
+    </div>
+
+
+
     <div class="col mb-3">
       <h5>Encuentranos en nuestras redes sociales</h5>
       <ul class="list-unstyled d-flex redes-sociales">
@@ -33,19 +53,22 @@
       </ul>
 
       <div class="col mb-3">
-
         <img src="icons/Cocinas_Integrales_Monica.png" alt="Logo" width="60%" height="30%"
           class="figura d-inline-block">
-        <p class="text-body-secondary">&copy; 2025</p>
-        <p>
-          <a class="perfilPersonal" href="https://github.com/Kriling-jarid75" target="_blank"> Desarrollado por
-            Ing. Kriling Jarid G.E</a>
-        </p>
-
+        <p class="text-body-secondary">&copy; 2025 Derechos recervados</p>
       </div>
-
     </div>
-
-
   </footer>
+
+  <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+    <p>Made by Ing. Kriling Jarid </p>
+    <ul class="list-unstyled d-flex">
+      <li class="ms-3"><a class="link-body-emphasis" href="https://www.instagram.com/cocintra_monica/"
+          aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+      </li>
+      <li class="ms-3"><a class="link-body-emphasis" href="https://www.facebook.com/profile.php?id=100008879267382"
+          aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+      </li>
+    </ul>
+  </div>
 </div>
