--- a/src/app/paginaInicial/home/home.component.css
+++ b/src/app/paginaInicial/home/home.component.css
@@ -86,3 +86,24 @@
 .linea{
   width: 100%;
 }
+
+
+
+.floating-whatsapp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+}
+.floating-whatsapp img {
+  width: 35px;
+  height: 35px;
+}
