Se suben nuevos ajustes en el frontend

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,10 @@
-<app-componente-navegacion></app-componente-navegacion>
+<div class="d-flex">
+  <!-- Sidebar -->
+  <app-componente-navegacion></app-componente-navegacion>
 
-<router-outlet></router-outlet>
+  <!-- Contenido dinámico -->
+  <div class="flex-grow-1 p-4 bg-light">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+
