Se sube nueva funcionalidad del lado del front en el componente de pagina no encontrada

--- a/src/app/pagina-no-encontrada-2/pagina-no-encontrada-2.component.html
+++ b/src/app/pagina-no-encontrada-2/pagina-no-encontrada-2.component.html
@@ -2,7 +2,7 @@
   <div style="text-align: center">
     <div class="error-code">404</div>
     <img src="icons/buildPage.png" alt="" width="100%">
-    <div class="error-message">Por el momento este servicio esta en construcción</div>
+    <div class="error-message">Por el momento este servicio no esta disponible o se encuentra en construcción</div>
     <!--   <a href="/" class="home-btn"
     ><i class="fas fa-home"></i> Voltar para a página inicial do app My Note</a
   > -->
